<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">江禾充电器智能手机监控系统</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    
    <string name="click_get">等待数据</string>
    
    <string name="main_battery_voltage">电池电压</string>
    <string name="main_charge_current">充电电流</string>
    <string name="main_already_over">已经完成</string>
    <string name="main_already_charge_time">已经充电时间</string>
    <string name="main_estimated_time_of_completion">预计完成时间</string>
    <string name="main_date_of_manufacture">产品生产日期</string>
    <string name="main_pause">暂&#160;&#160;&#160;&#160;&#160;&#160;&#160;停</string>
    <string name="main_electricize">充&#160;&#160;&#160;&#160;&#160;&#160;&#160;电</string>
    <string name="main_order_set">预约设置</string>
    <string name="main_order_electricize">预约充电</string>
    <string name="company_name">江禾电子</string>
    
    <string name="dialog_order_set">智能充电器预约设置</string>
    <string name="dialog_order_ok">预约确定</string>
    <string name="dialog_warn">预约设置时间可以比实际充电时间长，如果设置过短，充电完成时间就是实际充电时间，而非设定时间。</string>
    

      <string-array name="image_selector">
        <item>手机拍照</item>
        <item>本地上传</item>
    </string-array>
    
      
    <!--  DeviceListActivity -->
    <string name="scanning">scanning for devices...</string>
    <string name="select_device">select a device to connect</string>
    <string name="none_paired">No devices have been paired</string>
    <string name="none_found">No devices found</string>
    <string name="title_paired_devices">Paired Devices</string>
    <string name="title_other_devices">Other Available Devices</string>
    <string name="button_scan">Scan for devices</string>
   <!--  <string name="not_connected">You are not connected to a device</string> -->
    <string name="not_connected">您还没有连接设备</string>
</resources>
